--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-        <footer class="footer">
+        <footer class="footer margin-top-1">
             <div class="columns">
 
                 <div class="column">
