--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,13 +1,13 @@
         <footer class="footer margin-top-1">
-            <div class="columns">
+            <div class="columns is-mobile">
 
-                <div class="column">
-                <div style="width: 70%;margin-left: 15%;">
-                    <code><code>projetWeb.get('/coffee',(req,res)=>{</code><br><span style="margin-left: 2em;"></span><code>console.log('I really need a coffee !')</code><br><code>})</code></code>
-                </div>
+                <div class="column is-4-mobile has-text-right">
+                    <code>> git clone sleep</code><br>
+                    <code>> me.trySleep(2h)</code><br>
+                    <code>> me.returnWork()</code>
                 </div>
 
-                <div class="column has-text-centered">
+                <div class="column has-text-centered is-4-mobile">
                 <a class="button" href="/mentions_legales">
                     <span class="icon">
                     <i class="fas fa-clipboard"></i>
@@ -22,13 +22,18 @@
                 </a>
                 </div>
 
-                <div class="column">
-                <div style="width: 70%;margin-left: 15%;">
-                    <code><code>projetWeb.get('/sleep',(req,res)=>{</code><br><span style="margin-left: 2em;"></span><code>console.log('When am I suppose to sleep ?')</code><br><code>})</code></code>
-                </div>
+                <div class="column is-4-mobile">
+                    <code>> git clone coffee</code><br>
+                    <code>> me.makeCoffee(1)</code><br>
+                    <code>> me.drinkCoffee()</code>
                 </div>
 
             </div>
         </footer>
     </body>
 </html>
+
+
+<!-- 
+    
+-->
