--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,13 +1,13 @@
         <footer class="footer margin-top-1">
-            <div class="columns is-mobile">
+            <div class="columns">
 
-                <div class="column is-4-mobile has-text-right">
+                <div class="column has-text-centered">
                     <code>> git clone sleep</code><br>
                     <code>> me.trySleep(2h)</code><br>
                     <code>> me.returnWork()</code>
                 </div>
 
-                <div class="column has-text-centered is-4-mobile">
+                <div class="column has-text-centered">
                 <a class="button" href="/mentions_legales">
                     <span class="icon">
                     <i class="fas fa-clipboard"></i>
@@ -22,7 +22,7 @@
                 </a>
                 </div>
 
-                <div class="column is-4-mobile">
+                <div class="column has-text-centered">
                     <code>> git clone coffee</code><br>
                     <code>> me.makeCoffee(1)</code><br>
                     <code>> me.drinkCoffee()</code>
