--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -5,6 +5,7 @@
 <!-- Parallax -->
 <div id="main-parallax">
   <div style="border-top: solid 1px #FFFFFF;"></div>
+    <!--
     <div class="columns has-text-centered">
       <div class="column is-half-touch is-offset-one-quarter-touch is-4-desktop is-offset-4-desktop is-2 is-offset-5">
         <div class="box" id="title_box">
@@ -15,6 +16,8 @@
         </div>
       </div>
     </div>
+    -->
+
   </div>
 </div>
 
@@ -24,7 +27,7 @@
   <div class="hero has-text-centered margin-top-1">
     <div class="hero-body">
       <div class="container">
-        <h3 class="title is-2">Le camping</h3>
+        <h3 class="title is-size-3-touch">Le camping</h3>
         <h4 class="subtitle is-5">en quelques chiffres</h4>
       </div>
     </div>
