--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -3,23 +3,21 @@
 <%- include('../includes/navbar'); -%>
 
 <!-- Parallax -->
-<div id="main-parallax">
-  <div style="border-top: solid 1px #FFFFFF;"></div>
-    <!--
-    <div class="columns has-text-centered">
-      <div class="column is-half-touch is-offset-one-quarter-touch is-4-desktop is-offset-4-desktop is-2 is-offset-5">
-        <div class="box" id="title_box">
-          <div class="box-content">
-            <h1 class="title is-size-1">Bienvenue</h1>
-            <h2 class="subtitle is-size-3">dans le <span class="has-text-primary">lubéron</span></h2>
-          </div>
+<div id="main-parallax" class="has-text-centered">
+
+  <div class="columns is-centered is-vcentered is-mobile has-text-centered">
+    <div class="column is-narrow has-text-centered" id="title_box">
+      <div class="box">
+        <div class="box-content">
+          <h1 class="title is-size-1">Bienvenue</h1>
+          <h2 class="subtitle is-size-3">dans le <span class="has-text-primary">lubéron</span></h2>
         </div>
       </div>
-    </div>
-    -->
-
+    </div>    
   </div>
+
 </div>
+
 
 
 <!-- Quelques chiffres -->
