Fix css align and some bugs

--- a/views/index/connexion.ejs
+++ b/views/index/connexion.ejs
@@ -7,10 +7,10 @@
 
 <section class="container margin-top-1">
     <div class="columns columns is-centered is-mobile">
-        <div class="column is-narrow">
+        <div class="column is-narrow has-text-centered">
 
-            <h1 class="title is-size-1">Connexion</h1>
-            <h2 class="subtitle is-size-6 has-text-primary">Accédez à votre compte</h2>
+            <h1 class="title is-size-1 has-text-left">Connexion</h1>
+            <h2 class="subtitle is-size-6 has-text-primary has-text-left">Accédez à votre compte</h2>
 
             <form method="post">
                 <div class="field margin-form">
