Make authentication with tokens and fix some views

--- a/views/index/connexion.ejs
+++ b/views/index/connexion.ejs
@@ -15,7 +15,7 @@
             <form method="post">
                 <div class="field margin-form">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" placeholder="Email" name="emailUsername" required>  <!-- Email/Username -->
+                    <input class="input" type="text" placeholder="Email" name="email" required>  <!-- Email/Username -->
                     <span class="icon is-small is-left">
                         <i class="fas fa-envelope"></i>
                     </span>
