--- a/views/includes/errors.ejs
+++ b/views/includes/errors.ejs
@@ -1,8 +1,8 @@
 <%- include('../includes/header'); -%>
 
 <section class="container margin-top-1">
-  <div class="columns columns is-centered is-mobile">
-      <div class="column is-narrow has-text-centered">
+  <div class="columns columns is-mobile">
+      <div class="column is-half is-offset-one-quarter has-text-centered">
         <h1 class="title is-size-1 is-family-code"><%= locals.status %></h1>
         <h2 class="subtitle is-size-6 has-text-primary is-family-code"><%= locals.code %></h2>
         <p class="is-family-code margin-top-1"><%= locals.text %></p>
