--- a/views/index/connexion.ejs
+++ b/views/index/connexion.ejs
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="columns columns is-centered is-mobile">
-        <div class="column is-narrow has-text-centered">
+        <div class="column is-half has-text-centered">
             <% if (locals.flash) { %>
             <div class="notification is-<%= flash.type %>">
                 <button class="delete"></button>
