--- a/views/index/inscription.ejs
+++ b/views/index/inscription.ejs
@@ -39,7 +39,7 @@
                 </div>
                 <div class="field">
                     <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="text" placeholder="Téléphone" name="telephone" required>  <!-- Telephone -->
+                    <input class="input" type="text" placeholder="Tel : 07 23 ..." name="telephone" required>  <!-- Telephone -->
                     <span class="icon is-small is-left">
                         <i class="fas fa-phone"></i>
                     </span>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="columns columns is-centered is-mobile">
-        <div class="column is-narrow has-text-centered">
+        <div class="column is-half has-text-centered">
         <% if (locals.flash) { %>
             <div class="notification is-<%= flash.type %>">
                 <button class="delete"></button>
