Make a propos section

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <link rel="stylesheet" href="/css/stylesheet.css">
     <link href= "/css/pricing.css" rel="stylesheet" type="text/css" />
-    <link href= "/css/steps.css" rel="stylesheet" type="text/css" />
+    <link href= "/css/timeline.css" rel="stylesheet" type="text/css" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="icon" href='img/compass.png'/>
   </head>
