--- a/views/index/tarifs.ejs
+++ b/views/index/tarifs.ejs
@@ -77,9 +77,14 @@
       </div>
     </div>
   </div>
-  
-  <p class="heading has-text-centered margin-top-1">* nous appliquons des prix uniques tout au long de l'année *</p>
+</section>
 
+<section class="container">
+  <div class="columns columns is-centered is-mobile">
+      <div class="column is-half has-text-centered">
+        <p class="heading has-text-centered margin-top-1">* nous appliquons des prix uniques tout au long de l'année *</p>
+      </div>
+  </div>
 </section>
 
 <%- include('../includes/footer'); -%>
