Make the form for reservations and view mentions legales | notre equipe

--- a/views/index/contact.ejs
+++ b/views/index/contact.ejs
@@ -14,24 +14,24 @@
   <section class="columns is-centered margin-top-1">
     <div class="column is-one-quarter">
         <article class="panel is-primary">
-          <a class="panel-block is-active">
+          <a class="panel-block is-active" href="tel:+33351675***">
             <span class="panel-icon">
               <i class="fas fa-phone" aria-hidden="true"></i>
             </span>
             <span class="is-family-code">03 51 67 5* **</span>
           </a>
-          <a class="panel-block is-active">
+          <a class="panel-block is-active"  href="mailto:camping-des-sources@cds.fr">
             <span class="panel-icon">
               <i class="fas fa-at" aria-hidden="true"></i>
             </span>
             <span class="is-family-code">camping-des-sources@cds.fr</span>
           </a>
-          <a class="panel-block is-active">
+          <p class="panel-block is-active">
             <span class="panel-icon">
               <i class="fas fa-envelope" aria-hidden="true"></i>
             </span>
             <span class="is-family-code">45 rue St Albert, (04100) France</span>
-          </a>
+        </p>
         </article>
     </div>
 </section>
