Correct some views

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-        <footer class="footer margin-top-1">
+        <footer class="footer margin-top-1 ovhi">
             <div class="columns">
 
                 <div class="column has-text-centered">
