--- a/views/index/a_propos.ejs
+++ b/views/index/a_propos.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1">
+<section class="container margin-top-1 ovhi">
     <div class="columns columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
             <h1 class="title is-size-1 has-text-left">A propos</h1>
@@ -11,7 +11,7 @@
     </div>
 </section>
 
-<section class="timeline is-centered margin-top-1">
+<section class="timeline is-centered margin-top-1 ovhi">
     <div class="timeline-item is-primary">
       <div class="timeline-marker is-primary is-icon">
         <i class="fas fa-plus"></i>
@@ -95,7 +95,7 @@
     </header>
 </section>
 
-<section class="container">
+<section class="container ovhi">
     <div class="columns columns is-centered is-mobile">
         <div class="column is-half has-text-centered">
             <p class="heading has-text-centered margin-top-1">* Depuis plusieurs années, le camping des sources est engagé pour offrir à ses vacanciers une qualité de services toujours plus grande.
