--- a/views/index/connexion.ejs
+++ b/views/index/connexion.ejs
@@ -5,8 +5,8 @@
 <script src="/js/notifications.js"></script>
 
 
-<section class="container margin-top-1">
-    <div class="columns columns is-centered is-mobile">
+<section class="container margin-top-1 ovhi">
+    <div class="columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
 
             <h1 class="title is-size-1 has-text-left">Connexion</h1>
@@ -36,7 +36,7 @@
             <a href="/inscription" class="button is-primary is-inverted">Je n'ai pas encore de compte !</a>  <!-- Pas encore de compte -->           
         </div>
     </div>
-    <div class="columns columns is-centered is-mobile">
+    <div class="columns is-centered is-mobile">
         <div class="column is-half has-text-centered">
             <% if (locals.flash) { %>
             <div class="notification is-<%= flash.type %>">
