--- a/views/index/contact.ejs
+++ b/views/index/contact.ejs
@@ -2,38 +2,43 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1">
-    <div class="columns columns is-centered is-mobile">
-      <div class="column is-narrow has-text-centered">
-        <h1 class="title is-size-1 has-text-left">Contact</h1>
-        <h2 class="subtitle is-size-6 has-text-primary has-text-left">Envoyez nous vos souvenirs</h2>
-      </div>
+
+<section class="container margin-top-1 ovhi">
+  <div class="columns is-centered is-mobile">
+    <div class="column is-narrow has-text-centered">
+      <h1 class="title is-size-1 has-text-left">Contact</h1>
+      <h2 class="subtitle is-size-6 has-text-primary has-text-left">Ils travaillent ici</h2>
     </div>
+  </div>
 </section>
 
-  <section class="columns is-centered margin-top-1">
-    <div class="column is-one-quarter">
-        <article class="panel is-primary">
-          <a class="panel-block is-active" href="tel:+33351675***">
-            <span class="panel-icon">
-              <i class="fas fa-phone" aria-hidden="true"></i>
-            </span>
-            <span class="is-family-code">03 51 67 5* **</span>
-          </a>
-          <a class="panel-block is-active"  href="mailto:camping-des-sources@cds.fr">
-            <span class="panel-icon">
-              <i class="fas fa-at" aria-hidden="true"></i>
-            </span>
-            <span class="is-family-code">camping-des-sources@cds.fr</span>
-          </a>
-          <p class="panel-block is-active">
-            <span class="panel-icon">
-              <i class="fas fa-envelope" aria-hidden="true"></i>
-            </span>
-            <span class="is-family-code">45 rue St Albert, (04100) France</span>
+
+
+<section class="container ovhi pad">
+  <div class="columns is-centered margin-top-1">
+    <div class="column is-4-desktop is-half-tablet">
+      <article class="panel is-primary">
+        <a class="panel-block is-active" href="tel:+33351675***">
+          <span class="panel-icon">
+            <i class="fas fa-phone" aria-hidden="true"></i>
+          </span>
+          <span class="is-family-code">03 51 67 5* **</span>
+        </a>
+        <a class="panel-block is-active"  href="mailto:camping-des-sources@cds.fr">
+          <span class="panel-icon">
+            <i class="fas fa-at" aria-hidden="true"></i>
+          </span>
+          <span class="is-family-code">camping-des-sources@cds.fr</span>
+        </a>
+        <p class="panel-block is-active">
+          <span class="panel-icon">
+            <i class="fas fa-envelope" aria-hidden="true"></i>
+          </span>
+          <span class="is-family-code">45 rue St Albert, (04100) France</span>
         </p>
-        </article>
+      </article>
     </div>
+  </div>
 </section>
 
 <%- include('../includes/footer'); -%>
