--- a/views/index/reservation.ejs
+++ b/views/index/reservation.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section>
+<section class="ovhi">
     <form method="get" class="field is-horizontal-desktop" action="/reservation">
         <div class="columns is-desktop is-centered has-text-centered margin-top-1">    
             <div class="column is-narrow is-4-touch is-offset-4-touch">
