--- a/views/index/tarifs.ejs
+++ b/views/index/tarifs.ejs
@@ -79,7 +79,7 @@
   </div>
 </section>
 
-<section class="container">
+<section class="container ovhi">
   <div class="columns columns is-centered is-mobile">
       <div class="column is-half has-text-centered">
         <p class="heading has-text-centered margin-top-1">* nous appliquons des prix uniques tout au long de l'année *</p>
