--- a/views/index/inscription.ejs
+++ b/views/index/inscription.ejs
@@ -5,7 +5,7 @@
 <script src="/js/notifications.js"></script>
 
 
-<section class="container margin-top-1">
+<section class="container margin-top-1 ovhi">
     <div class="columns columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
 
