--- a/views/index/mentions_legales.ejs
+++ b/views/index/mentions_legales.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1">
+<section class="container margin-top-1 ovhi">
     <div class="columns columns is-centered is-mobile">
       <div class="column is-narrow has-text-centered">
         <h1 class="title is-size-1 has-text-left">Polytech</h1>
@@ -11,7 +11,7 @@
     </div>
 </section>
 
-  <section class="columns is-centered margin-top-1">
+  <section class="columns is-centered margin-top-1 ovhi">
     <div class="column is-half">
         <article class="panel is-primary">
           <p class="panel-block is-active">
