--- a/views/index/notre_equipe.ejs
+++ b/views/index/notre_equipe.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../includes/navbar'); -%>
 
-<section class="container margin-top-1">
+<section class="container margin-top-1 ovhi">
     <div class="columns columns is-centered is-mobile">
         <div class="column is-narrow has-text-centered">
             <h1 class="title is-size-1 has-text-left">Notre équipe</h1>
@@ -11,7 +11,7 @@
     </div>
 </section>
 
-<section class="container margin-top-1">
+<section class="container margin-top-1 ovhi">
     <div class="columns is-touch">
       <div class="column">
         <div class="card">
