Init the CRUD for manager

--- a/views/includes/navbarManager.ejs
+++ b/views/includes/navbarManager.ejs
@@ -17,12 +17,15 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                <a class="button is-primary" href="/connexion">
-                    <strong>mon compte</strong>
-                </a>
-                <a class="button is-light" href="/deconnexion">
-                    déconnexion
-                </a>
+                    <a class="button is-light" href="/manager">
+                        <strong>Dashboard</strong>
+                    </a>
+                    <a class="button is-light" href="/manager/personnel">
+                        <strong>personnel</strong>
+                    </a>
+                    <a class="button is-primary" href="/deconnexion">
+                        déconnexion
+                    </a>
                 </div>
             </div>
         </div>
