Finish the CRUD for manager account & check responsiveness

--- a/views/includes/navbarManager.ejs
+++ b/views/includes/navbarManager.ejs
@@ -18,7 +18,7 @@
             <div class="navbar-item">
                 <div class="buttons">
                     <a class="button is-light" href="/manager">
-                        <strong>Dashboard</strong>
+                        <strong>dashboard</strong>
                     </a>
                     <a class="button is-light" href="/manager/personnel">
                         <strong>personnel</strong>
