--- a/views/index/tarifs.ejs
+++ b/views/index/tarifs.ejs
@@ -9,7 +9,7 @@
 
 <section class="container margin-top-1">        
   <div class="pricing-table">
-    <div class="pricing-plan">
+    <div class="pricing-plan is-danger">
       <div class="plan-header">Emplacement</div>
       <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">€</span>10</span>/jour</div>
       <div class="plan-items">
@@ -26,11 +26,11 @@
       </div>
     </div>
   
-    <div class="pricing-plan is-warning">
-      <div class="plan-header">Mobil-home</div>
+    <div class="pricing-plan is-active">
+      <div class="plan-header">Châlet</div>
       <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">€</span>50</span>/jour</div>
       <div class="plan-items">
-        <div class="plan-item">25m² | 4 couchages</div>
+        <div class="plan-item">40m² | 4 couchages</div>
         <div class="plan-item">Accès lounge</div>
         <div class="plan-item">-</div>
         <div class="plan-item">-</div>
@@ -43,14 +43,14 @@
       </div>
     </div>
   
-    <div class="pricing-plan is-active">
-      <div class="plan-header">Châlet</div>
+    <div class="pricing-plan is-warning">
+      <div class="plan-header">Suite de luxe</div>
       <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">€</span>80</span>/jour</div>
       <div class="plan-items">
-        <div class="plan-item">50m² | 6 couchages</div>
+        <div class="plan-item">60m² | 6 couchages</div>
+        <div class="plan-item">Accès lounge</div>
         <div class="plan-item">Accès spa</div>
         <div class="plan-item">1 massage offert</div>
-        <div class="plan-item">-</div>
       </div>
       <div class="plan-footer">
         <form method="get">
@@ -59,23 +59,7 @@
         </form>
       </div>
     </div>
-  
-    <div class="pricing-plan is-danger">
-      <div class="plan-header">Suite luxe</div>
-      <div class="plan-price"><span class="plan-price-amount"><span class="plan-price-currency">€</span>110</span>/jour</div>
-      <div class="plan-items">
-        <div class="plan-item">80m² | 8 couchages</div>
-        <div class="plan-item">Accès spa</div>
-        <div class="plan-item">1 massage offert</div>
-        <div class="plan-item">1 excursion offerte</div>
-      </div>
-      <div class="plan-footer">
-        <form method="get">
-          <input name="name" value="Suite-Luxe" hidden>
-          <button class="button is-fullwidth" type="submit">Voir plus</button>
-        </form>
-      </div>
-    </div>
+
   </div>
 </section>
 
