--- a/views/manager/personnel.ejs
+++ b/views/manager/personnel.ejs
@@ -3,7 +3,7 @@
 <%- include('../includes/navbarManager'); -%>
 
 <div class="ovhi">
-    <section class="container margin-top-1 pad">
+    <section class="container margin-top-1">
         <div class="columns columns is-centered is-mobile">
             <div class="column is-narrow has-text-centered">
                 <h1 class="title is-size-1 has-text-left">Personnel</h1>
@@ -20,7 +20,6 @@
     
     
     <% if (locals.rows) { %>
-    <div class="margin-top-1">
         <table>
             <% for(var i=0; i < rows.length; i++) { %>
                 <div class="columns">
@@ -28,10 +27,10 @@
                         <div class="box">
                             <div class="columns is-vcentered has-text-left is-mobile">
                                 <div class="column is-2">
-                                    <span class="icon has-text-info"><i class="fas fa-user fa-2x"></i></span>
+                                    <span class="icon has-text-<%if(rows[i].estManager == 1){%>warning<%}else{%>info<%}%>"><i class="fas fa-user fa-2x"></i></span>
                                 </div>
                                 <div class="column is-1">
-                                    <p class="title is-5"><%=rows[i].id%></p>
+                                    <p class="title is-5"><%= rows[i].id %></p>
                                 </div>
                                 <div class="column is-7">
                                     <p class="title is-5"><span class="has-text-weight-light"><%= rows[i].identifiant %></span></p>
@@ -45,7 +44,6 @@
                 </div>
             <% } %>
         </table>
-    </div>
     <%}%>
 
     <div class="columns is-centered">
@@ -59,5 +57,7 @@
         </div>
     </div>
 </div>
+
+<script src="/js/notifications.js"></script>
 
 <%- include('../includes/footer'); -%>
