--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -9,7 +9,7 @@
     <link href= "/css/pricing.css" rel="stylesheet" type="text/css" />
     <link href= "/css/timeline.css" rel="stylesheet" type="text/css" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="icon" href='img/compass.png'/>
+    <link rel="icon" href='/img/compass.png'/>
   </head>
   <body>
 
