--- a/views/manager/personnel.ejs
+++ b/views/manager/personnel.ejs
@@ -27,7 +27,7 @@
                         <div class="box">
                             <div class="columns is-vcentered has-text-left is-mobile">
                                 <div class="column is-2">
-                                    <span class="icon has-text-<%if(rows[i].estManager == 1){%>warning<%}else{%>info<%}%>"><i class="fas fa-user fa-2x"></i></span>
+                                    <span class="has-text-<%if(rows[i].estManager == 1){%>warning<%}else{%>info<%}%>"><i class="fas fa-user fa-2x"></i></span>
                                 </div>
                                 <div class="column is-2">
                                     <p class="title is-5"><%= rows[i].id %></p>
