Crete CRUD for campeur and fix bugs

--- a/views/manager/index.ejs
+++ b/views/manager/index.ejs
@@ -3,13 +3,8 @@
 <%- include('../includes/navbarManager'); -%>
 
 <div class="w-60">
-    <section class="container margin-top-1">
-        <div class="columns is-centered is-mobile">
-            <div class="column is-narrow has-text-centered">
-                <h1 class="title is-size-1 has-text-left">Bonjour</h1>
-                <h2 class="subtitle is-size-3 has-text-primary has-text-left"><%=identifiant%></h2>
-            </div>
-        </div>
+    <section class="container margin-top-1 has-text-centered">
+      <h1 class="title is-size-1">Bonjour <span class="has-text-primary"><%=identifiant%></span></h1>
     </section>
     
     <section class="margin-top-1">
