Complete front page of the camping & make some personnel services

--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -25,8 +25,8 @@
   <div class="hero has-text-centered margin-top-1">
     <div class="hero-body">
       <div class="container">
-        <h3 class="title is-size-3-touch">Le camping</h3>
-        <h4 class="subtitle is-5">en quelques chiffres</h4>
+        <h1 class="title is-size-1">Notre camping</h1>
+        <h2 class="subtitle is-size-6 has-text-primary">en quelques chiffres</h2>
       </div>
     </div>
   </div>
@@ -60,8 +60,102 @@
   </div>
 </section>
 
-<section class="margin-top-1 has-text-centered">
-  <p>Others</p>
+<section>
+  <div class="hero has-text-centered margin-top-1">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title is-size-1">Plan du camping</h1>
+        <h2 class="subtitle is-size-6 has-text-primary">2019-2020</h2>
+      </div>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column is-6 is-offset-3">
+      <figure class="image">
+        <img src="/img/plan-du-camping.png">
+      </figure>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="hero has-text-centered margin-top-1">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title is-size-1">Quelques photos</h1>
+        <h2 class="subtitle is-size-6 has-text-primary">de nos campeurs</h2>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container margin-top-1 ovhi">
+  <div class="columns is-touch">
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_1.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_2.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_3.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_4.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+  </div>
+  <div class="columns is-touch">
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_5.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_6.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_7.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+
+    <div class="column is-3">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="/img/index_8.jpg" alt="Image du camping">
+        </figure>
+      </div>
+    </div>
+  </div>
 </section>
 
 <%- include('../includes/footer'); -%>
