--- a/views/personnel/incidents.ejs
+++ b/views/personnel/incidents.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/header'); -%>
 
-<%- include('../includes/navbarManager'); -%>
+<%- include('../includes/navbarPersonnel'); -%>
 
 <div class="ovhi">
     <section class="container margin-top-1 ">
