--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -14,6 +14,12 @@
                     </span>
                     <span>Mentions légales</span>
                 </a>
+                <a class="button" href="/">
+                    <span class="icon">
+                    <i class="fas fa-home"></i>
+                    </span>
+                    <span>Accueil</span>
+                </a>
                 <a class="button" href="https://github.com/Axel-Duval/ProjetWeb" target="_blank">
                     <span class="icon">
                     <i class="fab fa-github"></i>
@@ -32,8 +38,3 @@
         </footer>
     </body>
 </html>
-
-
-<!-- 
-    
--->
