--- a/views/personnel/campeurs_all.ejs
+++ b/views/personnel/campeurs_all.ejs
@@ -3,28 +3,28 @@
 <%- include('../includes/navbarPersonnel'); -%>
 
 <div class="ovhi">
-
+    
     <section class="container margin-top-1 ">
         <div class="columns is-centered">
             <div class="column is-narrow has-text-centered">
                 <h1 class="title is-1 has-text-left">Campeurs</h1>
-                <h2 class="subtitle has-text-primary has-text-left">Dans le camping</h2>
-                <a class="button is-primary is-small is-rounded is-outlined" href="/personnel/campeurs/all">Tous les campeurs</a>
+                <h2 class="subtitle has-text-primary has-text-left">Tous les campeurs</h2>
+                <a class="button is-primary is-small is-rounded is-outlined" href="/personnel/campeurs">Dans le camping</a>
             </div>
         </div>
     </section>
 
     <section>
-        <% if (flash){ %>
-            <div class="columns is-centered margin-top-1">
-                <div class="column is-5 has-text-centered">
-                    <div class="notification is-<%= flash.type %>">
-                        <button class="delete"></button>
-                        <%= locals.flash.text %>
-                    </div>
+        <div class="columns is-centered margin-top-1">
+            <div class="column is-5 has-text-centered">
+                <% if (locals.flash){ %>
+                <div class="notification is-<%= flash.type %>">
+                    <button class="delete"></button>
+                    <%= locals.flash.text %>
                 </div>
+                <% } %>
             </div>
-        <% } %>
+        </div>
     </section>
 
     <section class="margin-top-1">
