--- a/views/personnel/index.ejs
+++ b/views/personnel/index.ejs
@@ -29,7 +29,7 @@
             </div>
             <div class="tile is-parent">
               <article class="tile is-child box notification is-warning" id="campeurs">
-                <h3 class="title is-4">Capeurs</h3>
+                <h3 class="title is-4">Campeurs</h3>
                 <h4 class="subtitle has-text-weight-semibold">actuels</h4>
                 <div class="content">
                   <p class="title is-1 has-text-centered is-family-monospace"><%if(camp){%><%=camp.cpt%><%}else{%>-<%}%></p>
